# benchmark-packaging

./: .env.example  .env.railway.example  .gitignore  COMPETITOR_SCRAPER_README.md  GOLDEN_RULES_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICK_START.md  RAILWAY_SETUP.md  README.md  README_RAILWAY.md  copy_runs_to_server.sh  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  railway-cli-setup.sh  railway-setup.sh  railway.json  railway.toml  rebrand_jobs_20260131_123520.txt  rebrand_jobs_20260131_125256.txt  run_rebrand_batch.sh  setup-railway-services.sh  test_competitor_scraper.py
analysis_engine/: OCR_PIPELINE.md  PHASE_1_3_README.md  README.md  generate_golden_rules.py  generate_golden_rules_standalone.py  main.py  pyproject.toml  requirements.txt  run_competitor_scraper.py  test_ocr.py  test_ocr_structure.py  test_review_correlation.py  validate_ocr.py
analysis_engine/src/: __init__.py  cloud_storage.py  competitive_analyzer.py  competitor_models.py  competitor_scraper.py  config.py  correlation_engine.py  element_extractor.py  element_mapper.py  front_extractor.py  golden_rules_generator.py  image_compositor.py  image_selector.py  models.py  ocr_analyzer.py  parallel_executor.py  product_discovery.py  rebrand_pipeline.py  rebrand_session.py  review_analyzer.py  review_scraper.py  runner.py  scraper.py  single_image_runner.py  utils.py  visual_analyzer.py  visualization.py
analysis_engine/src/pipeline/: steps.py
analysis_engine/src/prompts/: brands_discovery_user.txt  competitive_analysis_system.txt  (+27 more)
(+116 files in other folders)
