[project]
name = "analysis-engine"
version = "0.3.0"
description = "LLM-powered product analysis engine for lead generation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "firecrawl-py>=4.12.0",
    "google-genai>=1.47.0",
    "openai>=2.2.0",
    "pandas>=2.0.3",
    "python-dotenv>=1.0.1",
    # LangChain for agentic workflows
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.0.0",
    # Image processing
    "pillow>=10.0.0",
]

[project.scripts]
analysis-engine = "main:main"
