[project]
name = "analysis-engine"
version = "0.3.0"
description = "LLM-powered product analysis engine for lead generation"
readme = "README.md"
requires-python = ">=3.10"

# Dependencies are managed via requirements.txt for Docker compatibility
# See requirements.txt for the full list of pinned dependencies
